# starlink-wifi

./: .gitignore  Makefile  rules.mk  spacex_openwrt.config
config/: Config-build.in  Config-devel.in  Config-kernel.in
dl/: adb-6fe92d1a3fb17545d82d020a3c995f32e6b71f9d.tar.xz  backports-20161201-4.4.60-9ab3068.tar.bz2  ca-certificates_20150426.tar.xz  ca-certificates_20161130+nmu1.tar.xz  conntrack-tools-1.4.2.tar.bz2  curl-7.57.0.tar.bz2  dnsmasq-2.73.tar.xz  dropbear-2015.67.tar.bz2  ethtool-3.18.tar.xz  expat-2.2.4.tar.bz2  freetype-2.5.5.tar.bz2  inadyn-2.3.1.tar.xz  iozone3_420.tar  iproute2-4.0.0.tar.xz  iw-4.14.tar.xz  libart_lgpl-2.3.21.tar.bz2  libcap-2.24.tar.xz  libgcrypt-1.6.1.tar.bz2  libnetfilter_conntrack-1.0.4.tar.bz2  libnetfilter_cthelper-1.0.0.tar.bz2  libnetfilter_cttimeout-1.0.0.tar.bz2  mdadm-3.2.5.tar.xz  (+37 more)
qca/src/qca-lacpd/: CMakeLists.txt  main.c  wrapper.h
qca/src/qca-lacpd/config/: CMakeLists.txt  config.c  config_api.h  config_uci.c  config_uci.h
qca/src/qca-lacpd/lacp/: CMakeLists.txt  aggregator.c  aggregator.h  fsm.c  fsm.h  lacp.c  lacp.h  lacp_api.h  lacp_fsm.c  lacp_fsm.h  lacpdu.c  lacpdu.h  port.c  port.h  port_info.c  port_info.h
qca/src/qca-lacpd/lib_general_device/: CMakeLists.txt  general_device.c  general_device_api.h  general_device_linux.c  general_device_linux.h  general_device_qca_switch.c  general_device_qca_switch.h  general_device_switch.c  general_device_switch.h  general_os_service.h
qca/src/qca-lacpd/status/: CMakeLists.txt  status.c  status_api.h  status_hotplug.c  status_hotplug.h  status_ubus.c  status_ubus.h
(+4962 files in other folders)
